@@ -43,6 +43,11 @@ path. Also, when a match fails, set the subject field in the match data to NULL
 for tidiness - none of the substring extractors should reference this after 
 match failure.
 
+11. If a pattern started with a subroutine call that had a quantifier with a 
+minimum of zero, an incorrect "match must start with this character" could be 
+recorded. Example: /(?&xxx)*ABC(?<xxx>XYZ)/ would (incorrectly) expect 'A' to 
+be the first character of a match. 
+
 
 Version 10.32 10-September-2018
 -------------------------------
